// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
"
class Foo {
  constructor() {
    this.bar = this.bar.bind(this);
  }

  bar() {
    const miau = 1;
  }
}

      ↓ ↓ ↓ ↓ ↓ ↓

class Foo {
  constructor() {}

  bar = () => {
    const miau = 1;
  };
}
"
`;

exports[`method with args 1`] = `
"
class Foo {
  constructor() {
    this.methodWithArgs = this.methodWithArgs.bind(this);
  }

  methodWithArgs(arg1, arg2) {
    console.log(arg1, arg2)
  }
}

      ↓ ↓ ↓ ↓ ↓ ↓

class Foo {
  constructor() {}

  methodWithArgs = (arg1, arg2) => {
    console.log(arg1, arg2);
  };
}
"
`;
